# ocean-c2d-flow-ui

./: .gitignore  README.md  start_ocean.sh
api/: Dockerfile  pyproject.toml  start.sh
api/src/: server.py
api/src/adapters/: config.py  ocean.py
api/src/config/: config.production.py  config.py
api/src/db/: assets.py  computes.py  users.py
api/src/handlers/: assets.py  authentication.py  compute.py  users.py
api/src/sanic_motor/: motor.py
app/: .eslintrc  Dockerfile  config.js  craco.config.js  index.js  package-lock.json  package.json  tsconfig.json
app/conf/: nginx.conf
app/src/: App.tsx  index.css  setupProxy.js
app/src/components/Assets/: AssetList.tsx  LinkAssetsForm.tsx  OwnedAssetList.tsx  UploadAssetForm.tsx  Utils.ts
app/src/components/Compute/: ComputeList.tsx
app/src/components/Layout/: Menu.tsx
app/src/components/Login/: LoginForm.tsx
app/src/components/Utils/: BlockUI.css  BlockUi.tsx  Pagination.tsx  TablePagination.tsx  TablePlaceholder.tsx
app/src/contexts/: UIContext.ts
app/src/pages/Assets/: Assets.tsx
app/src/pages/Compute/: Compute.tsx
app/src/pages/Login/: Login.tsx
app/src/providers/: UiProvider.tsx
app/src/services/: ajax-services.ts  config-history.ts  network-config.ts
assets/: alg.json  data.json
assets/Prediction/: linecounter.py  prediction.py
barge/: start_ocean.sh
barge/compose-files/: mongo.yml  sanic.yml
barge/compose-files/scripts/: initiate_replica.sh
compose-files/: mongo.yml  sanic.yml  web.yml
compose-files/data/: users.json
compose-files/scripts/: initiate_replica.sh
(+1 files in other folders)
